--- a/projetoBlocoDeNotas/Front-End/src/App.css
+++ b/projetoBlocoDeNotas/Front-End/src/App.css
@@ -8,3 +8,9 @@
   width: 100%;
   display: flex;
 }
+
+@media screen and (max-width:776px) {
+  .backgroundGeral{
+    flex-direction: column;
+  }
+}
