--- a/projetoBlocoDeNotas/Front-End/src/componentes/LadoLogin/LadoLogin.css
+++ b/projetoBlocoDeNotas/Front-End/src/componentes/LadoLogin/LadoLogin.css
@@ -1,7 +1,50 @@
 .ladoLogin{
    display: flex;
-   align-items: center;
    width: 100%;
    height: 90%;
- 
+   flex-direction: column;
+   gap: 30px;
+   align-items: center;
+   justify-content: center;
+}
+.or{
+   display: flex;
+   justify-content:center;
+   align-items: center;
+   height: auto;
+   column-gap: 10px;
+   font-weight: bold;
+}
+.titulo{
+   color: #1E1E1E;
+   font-size: 50px;
+   font-style: normal;
+   font-weight: 700;
+   margin-top: 10px;
+   height: auto;
+}
+.check{
+   height: auto;
+   display: flex;
+   justify-content: space-between;
+   width: 100%;
+   max-width: 70%;
+}
+.checkboxDiv{
+   display: flex;
+   gap: 10px;
+}
+.check p{
+   font-weight: bold;
+   font-size: 20px;
+}
+
+.sublinhado{
+   text-decoration: underline;
+}
+
+.checkbox{
+   width: 20px;
+   height: 20px;
+   background-color:#E4C5C4 ;
 }
