--- a/projetoBlocoDeNotas/Front-End/src/componentes/Botao/Botao.css
+++ b/projetoBlocoDeNotas/Front-End/src/componentes/Botao/Botao.css
@@ -1,15 +1,15 @@
 .botao {
   width: 100%;
-  max-width: 70%;
+  max-width: 65%;
   height: auto;
   padding: 15px 0px;
   border: 5px;
-  background-color: F8F7F7;
+  background-color: #F8F7F7;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   text-align: center;
   color: #000;
   font-size: 22px;
-  font-weight: bold;
+  font-weight: 800;
   display: flex;
   justify-content: center;
   align-items: center;
