--- a/projetoBlocoDeNotas/Front-End/src/componentes/LadoLogin/LadoLogin.css
+++ b/projetoBlocoDeNotas/Front-End/src/componentes/LadoLogin/LadoLogin.css
@@ -19,7 +19,7 @@
    color: #1E1E1E;
    font-size: 50px;
    font-style: normal;
-   font-weight: 700;
+   font-weight: 800;
    margin-top: 10px;
    height: auto;
 }
@@ -28,7 +28,7 @@
    display: flex;
    justify-content: space-between;
    width: 100%;
-   max-width: 70%;
+   max-width: 65%;
 }
 .checkboxDiv{
    display: flex;
@@ -47,4 +47,11 @@
    width: 20px;
    height: 20px;
    background-color:#E4C5C4 ;
+}
+
+.barraEstilo{
+   height: 2px;
+   width:100%;
+   max-width: 70%;
+   background-color: #1E1E1E;
 }
