--- a/projetoBlocoDeNotas/Front-End/src/componentes/Botao/Botao.css
+++ b/projetoBlocoDeNotas/Front-End/src/componentes/Botao/Botao.css
@@ -8,7 +8,7 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   text-align: center;
   color: #000;
-  font-size: 22px;
+  font-size: 1.7em;
   font-weight: 800;
   display: flex;
   justify-content: center;
@@ -17,4 +17,11 @@
 }
 .botao:hover{
     cursor: pointer;
+}
+
+@media screen and (max-width:776px) {
+  .botao{
+    font-size: 1em;
+    
+  }
 }
