--- a/projetoBlocoDeNotas/Front-End/src/componentes/CampoTexto/CampoTexto.css
+++ b/projetoBlocoDeNotas/Front-End/src/componentes/CampoTexto/CampoTexto.css
@@ -7,12 +7,18 @@
     background-color:#F8F7F7;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border: none;
-    font-size: 20px;
+    font-size: 1.5em;
     box-sizing: border-box;
 }
 .inputTexto::placeholder{
     font-size: 20px;
-    
+    font-size: 1em;
     font-weight: bold;
     color: rgba(0, 0, 0, 0.5);
 }
+
+@media screen and (max-width:776px) {
+    .inputTexto{
+        max-height: 50%;
+    }
+  }
