--- a/projetoBlocoDeNotas/Front-End/src/componentes/LadoLogin/LadoLogin.css
+++ b/projetoBlocoDeNotas/Front-End/src/componentes/LadoLogin/LadoLogin.css
@@ -1,23 +1,29 @@
+
 .ladoLogin{
    display: flex;
    width: 100%;
    height: 90%;
    flex-direction: column;
-   gap: 30px;
+   gap: 40px;
    align-items: center;
    justify-content: center;
+   color: black;
+
+   
 }
 .or{
    display: flex;
    justify-content:center;
    align-items: center;
    height: auto;
-   column-gap: 10px;
-   font-weight: bold;
+   column-gap: 30px;
+   font-weight:900;
+   font-size: 1.5em;
+   max-width: 65%;
 }
 .titulo{
    color: #1E1E1E;
-   font-size: 50px;
+   font-size: 4em;
    font-style: normal;
    font-weight: 800;
    margin-top: 10px;
@@ -29,6 +35,7 @@
    justify-content: space-between;
    width: 100%;
    max-width: 65%;
+   font-weight: bold;
 }
 .checkboxDiv{
    display: flex;
@@ -50,8 +57,43 @@
 }
 
 .barraEstilo{
-   height: 2px;
+   height: 2.5px;
    width:100%;
-   max-width: 70%;
+   max-width: 65%;
    background-color: #1E1E1E;
 }
+
+.inputTexto[type = submit]:hover{
+   cursor: pointer;
+}
+
+.naoTemConta{
+   font-size: 1.5em;
+   font-weight: bold;
+}
+
+.barraEstiloOr{
+   width: 100%;
+   max-width: 65%;
+}
+
+@media screen and (max-width:776px) {
+  .titulo{
+   font-size: 2em;
+  }
+  .ladoLogin{
+   padding: 30px 0;
+  }
+ }
+ 
+ @media screen and (max-width:500px) {
+   .ladoLogin,.check p{
+      font-size:1em;
+   }
+ }
+
+ @media screen and (min-width:900px) {
+   .titulo{
+      font-size: 3em;
+   }
+ }
